--- a/plugin.xml
+++ b/plugin.xml
@@ -26,7 +26,7 @@
 
   <engines>
     <engine name="cordova-android" version="5.0.0" />
-    <engine name="cordova-ios" version=">3.9" />
+    <engine name="cordova-ios" version="3.9.2" />
   </engines>
 
   <!-- Specific versions of dependencies required by the Mobile SDK plugin -->
